-New genre "Film" -NEw roles "Director", "Actor", "Cinematographer"
Former-commit-id: 553ba124d733051bb027bc5b1df1227813301340

--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -225,6 +225,8 @@ ENUM_CONTENTCATEGORY_supplementary-material = Erg\u00E4nzendes Material
 
 ENUM_CONTENTCATEGORY_table-of-contents = Inhaltsverzeichnis
 
+ENUM_CREATORROLE_ACTOR = [NEW] Schauspieler/in
+
 ENUM_CREATORROLE_ADVISOR = Ratgeber
 
 ENUM_CREATORROLE_APPLICANT = Antragssteller
@@ -233,9 +235,13 @@ ENUM_CREATORROLE_ARTIST = K\u00FCnstler
 
 ENUM_CREATORROLE_AUTHOR = Autor
 
+ENUM_CREATORROLE_CINEMATOGRAPHER = [NEW] Kameramann/frau
+
 ENUM_CREATORROLE_COMMENTATOR = Kommentator
 
 ENUM_CREATORROLE_CONTRIBUTOR = Beitragender
+
+ENUM_CREATORROLE_DIRECTOR = [NEW] Regisseur
 
 ENUM_CREATORROLE_EDITOR = Herausgeber
 
@@ -361,6 +367,8 @@ ENUM_GENRE_EDITORIAL = Editorial
 ENUM_GENRE_ENCYCLOPEDIA = Lexikon
 
 ENUM_GENRE_FESTSCHRIFT = Festschrift
+
+ENUM_GENRE_FILM = [NEW] Film
 
 ENUM_GENRE_HANDBOOK = Handbuch
 
@@ -2472,6 +2480,8 @@ item_date-modified = \u00C4nderungsdatum
 item_date-submitted = Eingereicht
 
 item_degree = Abschluss
+
+item_film_duration = [NEW] Dauer
 
 item_genre = Genre
 
