--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -225,6 +225,8 @@ ENUM_CONTENTCATEGORY_supplementary-material = Material suplementario
 
 ENUM_CONTENTCATEGORY_table-of-contents = \u00CDndice de contenidos 
 
+ENUM_CREATORROLE_ACTOR = [NEW] Actor
+
 ENUM_CREATORROLE_ADVISOR = Asesor 
 
 ENUM_CREATORROLE_APPLICANT = Demandante
@@ -233,9 +235,13 @@ ENUM_CREATORROLE_ARTIST = Artista
 
 ENUM_CREATORROLE_AUTHOR = Autor 
 
+ENUM_CREATORROLE_CINEMATOGRAPHER = [NEW] Cinematographer
+
 ENUM_CREATORROLE_COMMENTATOR = Comentarista 
 
 ENUM_CREATORROLE_CONTRIBUTOR = Colaborador 
+
+ENUM_CREATORROLE_DIRECTOR = [NEW] Director
 
 ENUM_CREATORROLE_EDITOR = Editor
 
@@ -349,6 +355,8 @@ ENUM_GENRE_EDITORIAL = Editorial
 ENUM_GENRE_ENCYCLOPEDIA = Enciclopedia 
 
 ENUM_GENRE_FESTSCHRIFT = Festschrift 
+
+ENUM_GENRE_FILM = [NEW] Pel\u00EDcula
 
 ENUM_GENRE_HANDBOOK = Manual 
 
@@ -2402,6 +2410,8 @@ item_date-modified = Fecha de modificaci\u00F3n
 item_date-submitted = Fecha de env\u00EDo
 
 item_degree = Grado acad\u00E9mico
+
+item_film_duration = [NEW] Duraci\u00F3n
 
 item_genre = G\u00E9nero
 
