--- a/pubman/pubman_presentation/src/main/resources/nims/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_en.properties
@@ -191,7 +191,7 @@ ENUM_ALTERNATIVETITLETYPE_OTHER = Other
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
-ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Deprecated: fulltext
+ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Deprecated: Any fulltext
 
 ENUM_CONTENTCATEGORY_COPYRIGHT_TRANSFER_AGREEMENT = Deprecated: Copyright transfer agreement
 
@@ -209,7 +209,7 @@ ENUM_CONTENTCATEGORY_TABLE_OF_CONTENTS = Deprecated: Table of contents
 
 ENUM_CONTENTCATEGORY_abstract = Abstract
 
-ENUM_CONTENTCATEGORY_any-fulltext = fulltext
+ENUM_CONTENTCATEGORY_any-fulltext = Any fulltext
 
 ENUM_CONTENTCATEGORY_copyright-transfer-agreement = Copyright transfer agreement
 
@@ -225,6 +225,8 @@ ENUM_CONTENTCATEGORY_supplementary-material = Supplementary material
 
 ENUM_CONTENTCATEGORY_table-of-contents = Table of contents
 
+ENUM_CREATORROLE_ACTOR = [NEW] Actor
+
 ENUM_CREATORROLE_ADVISOR = Advisor
 
 ENUM_CREATORROLE_APPLICANT = Applicant
@@ -233,9 +235,13 @@ ENUM_CREATORROLE_ARTIST = Artist
 
 ENUM_CREATORROLE_AUTHOR = Author
 
+ENUM_CREATORROLE_CINEMATOGRAPHER = [NEW] Cinematographer
+
 ENUM_CREATORROLE_COMMENTATOR = Commentator
 
 ENUM_CREATORROLE_CONTRIBUTOR = Contributor
+
+ENUM_CREATORROLE_DIRECTOR = [NEW] Director
 
 ENUM_CREATORROLE_EDITOR = Editor
 
@@ -361,6 +367,8 @@ ENUM_GENRE_EDITORIAL = Editorial
 ENUM_GENRE_ENCYCLOPEDIA = Encyclopedia 
 
 ENUM_GENRE_FESTSCHRIFT = Festschrift
+
+ENUM_GENRE_FILM = [NEW] Film
 
 ENUM_GENRE_HANDBOOK = Handbook 
 
@@ -2474,6 +2482,8 @@ item_date-modified = Date modified
 item_date-submitted = Date submitted
 
 item_degree = Degree
+
+item_film_duration = [NEW] Duration
 
 item_genre = Genre
 
