--- a/pubman/pubman_presentation/src/main/resources/nims/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_ja.properties
@@ -225,6 +225,8 @@ ENUM_CONTENTCATEGORY_supplementary-material = \u4ED8\u9332\u8CC7\u6599
 
 ENUM_CONTENTCATEGORY_table-of-contents = \u76EE\u6B21
 
+ENUM_CREATORROLE_ACTOR = [NEW] Actor
+
 ENUM_CREATORROLE_ADVISOR = \u5B66\u4F4D\u8AD6\u6587\u4E3B\u67FB
 
 ENUM_CREATORROLE_APPLICANT = \u51FA\u9858\u4EBA
@@ -233,9 +235,13 @@ ENUM_CREATORROLE_ARTIST = \u30A2\u30FC\u30C6\u30A3\u30B9\u30C8
 
 ENUM_CREATORROLE_AUTHOR = \u8457\u8005
 
+ENUM_CREATORROLE_CINEMATOGRAPHER = [NEW] Cinematographer
+
 ENUM_CREATORROLE_COMMENTATOR = \u30B3\u30E1\u30F3\u30C6\u30FC\u30BF\u30FC
 
 ENUM_CREATORROLE_CONTRIBUTOR = \u5BC4\u7A3F\u8005
+
+ENUM_CREATORROLE_DIRECTOR = [NEW] Director
 
 ENUM_CREATORROLE_EDITOR = \u7DE8\u96C6\u8005
 
@@ -349,6 +355,8 @@ ENUM_GENRE_EDITORIAL = Editorial
 ENUM_GENRE_ENCYCLOPEDIA = \u767E\u79D1\u4E8B\u5178
 
 ENUM_GENRE_FESTSCHRIFT = \u8A18\u5FF5\u8AD6\u6587\u96C6
+
+ENUM_GENRE_FILM = [NEW] Film
 
 ENUM_GENRE_HANDBOOK = \u30CF\u30F3\u30C9\u30D6\u30C3\u30AF
 
@@ -2439,6 +2447,8 @@ item_date-modified = \u4FEE\u6B63\u65E5
 item_date-submitted = \u6295\u7A3F\u65E5
 
 item_degree = \u5B66\u4F4D
+
+item_film_duration = [NEW] Duration
 
 item_genre = \u8CC7\u6599\u7A2E\u5225
 
