Added new social bookmarks
Former-commit-id: 7d85281d69ade5d1e6e7f3890bd79e33308d584a

--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -1303,11 +1303,15 @@ ViewItemFull_lblShowGroup = mostrar
 
 ViewItemFull_lblSocialBookmarkingDescription = eSciDoc PubMan: 
 
-ViewItemFull_lblSocialBookmarking_CiteULike = A\u00F1adir este item a  CiteULike.
+ViewItemFull_lblSocialBookmarking_BibSonomy = A\u00F1adir este item a BibSonomy.
 
-ViewItemFull_lblSocialBookmarking_Connotea = A\u00F1adir este item a Connotea.
+ViewItemFull_lblSocialBookmarking_CiteULike = A\u00F1adir este item a CiteULike.
 
 ViewItemFull_lblSocialBookmarking_Delicious = Marcar este item en Delicious.
+
+ViewItemFull_lblSocialBookmarking_Digg = A\u00F1adir este item a Digg.
+
+ViewItemFull_lblSocialBookmarking_Mendeley = A\u00F1adir este item a Mendeley.
 
 ViewItemFull_lblSourceAffiliations = Afiliaciones
 
