--- a/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
@@ -1313,11 +1313,17 @@ ViewItemFull_lblShowGroup = einblenden:
 
 ViewItemFull_lblSocialBookmarkingDescription = eSciDoc PubMan: 
 
+ViewItemFull_lblSocialBookmarking_BibSonomy = Diesen Datensatz zu BibSonomy hinzuf\u00FCgen.
+
 ViewItemFull_lblSocialBookmarking_CiteULike = Diesen Datensatz zu CiteULike hinzuf\u00FCgen.
 
 ViewItemFull_lblSocialBookmarking_Connotea = Diesen Datensatz zu Connotea hinzuf\u00FCgen.
 
 ViewItemFull_lblSocialBookmarking_Delicious = Diesen Datensatz zu Delicious hinzuf\u00FCgen.
+
+ViewItemFull_lblSocialBookmarking_Digg = Diesen Datensatz zu Digg hinzuf\u00FCgen.
+
+ViewItemFull_lblSocialBookmarking_Mendeley = Diesen Datensatz zu Mendeley hinzuf\u00FCgen.
 
 ViewItemFull_lblSourceAffiliations = Affiliations
 
