--- a/pubman/pubman_presentation/src/main/resources/nims/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_ja.properties
@@ -1290,11 +1290,17 @@ ViewItemFull_lblShowGroup = \u8868\u793A:
 
 ViewItemFull_lblSocialBookmarkingDescription = eSciDoc PubMan: 
 
+ViewItemFull_lblSocialBookmarking_BibSonomy = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u3092BibSonomy\u306B\u8FFD\u52A0\u3059\u308B
+
 ViewItemFull_lblSocialBookmarking_CiteULike = \u3000\u3053\u306E\u30A2\u30A4\u30C6\u30E0\u3092CiteULike\u306B\u8FFD\u52A0\u3059\u308B
 
 ViewItemFull_lblSocialBookmarking_Connotea = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u3092Connotea\u306B\u8FFD\u52A0\u3059\u308B
 
 ViewItemFull_lblSocialBookmarking_Delicious = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u3092DElicious\u306B\u30D6\u30C3\u30AF\u30DE\u30FC\u30AF\u3059\u308B
+
+ViewItemFull_lblSocialBookmarking_Digg = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u3092Digg\u306B\u8FFD\u52A0\u3059\u308B
+
+ViewItemFull_lblSocialBookmarking_Mendeley = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u3092Mendeley\u306B\u8FFD\u52A0\u3059\u308B
 
 ViewItemFull_lblSourceAffiliations = \u6240\u5C5E
 
