--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -1313,11 +1313,15 @@ ViewItemFull_lblShowGroup = show
 
 ViewItemFull_lblSocialBookmarkingDescription = eSciDoc PubMan: 
 
+ViewItemFull_lblSocialBookmarking_BibSonomy = Add this item to BibSonomy.
+
 ViewItemFull_lblSocialBookmarking_CiteULike = Add this item to CiteULike.
 
-ViewItemFull_lblSocialBookmarking_Connotea = Add this item to Connotea.
-
 ViewItemFull_lblSocialBookmarking_Delicious = Bookmark this item at Delicious.
+
+ViewItemFull_lblSocialBookmarking_Digg = Add this item to Digg.
+
+ViewItemFull_lblSocialBookmarking_Mendeley = Add this item to Mendeley.
 
 ViewItemFull_lblSourceAffiliations = Affiliations
 
