PUBMAN-2414 fixed: Change label for special journal issue
Former-commit-id: 30fcca74677b1c384371cf0eeb18a3d42b5950fb

--- a/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
@@ -372,7 +372,7 @@ ENUM_GENRE_FILM = [NEW] Film
 
 ENUM_GENRE_HANDBOOK = Handbuch
 
-ENUM_GENRE_ISSUE = Sonderheft
+ENUM_GENRE_ISSUE = Heft
 
 ENUM_GENRE_JOURNAL = Zeitschrift
 
