--- a/pubman/pubman_presentation/src/main/resources/nims/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_es.properties
@@ -360,7 +360,7 @@ ENUM_GENRE_FILM = [NEW] Pel\u00EDcula
 
 ENUM_GENRE_HANDBOOK = Manual 
 
-ENUM_GENRE_ISSUE = N\u00FAmero especial 
+ENUM_GENRE_ISSUE = N\u00FAmero
 
 ENUM_GENRE_JOURNAL = Revista
 
