--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_de.properties
@@ -372,7 +372,7 @@ ENUM_GENRE_FILM = [NEW] Film
 
 ENUM_GENRE_HANDBOOK = Handbuch
 
-ENUM_GENRE_ISSUE = Sonderheft
+ENUM_GENRE_ISSUE = Heft
 
 ENUM_GENRE_JOURNAL = Zeitschrift
 
