--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_en.properties
@@ -372,7 +372,7 @@ ENUM_GENRE_FILM = [NEW] Film
 
 ENUM_GENRE_HANDBOOK = Handbook 
 
-ENUM_GENRE_ISSUE = Special Journal Issue
+ENUM_GENRE_ISSUE = Issue
 
 ENUM_GENRE_JOURNAL = Journal
 
