PUBMAN-1886 fixed: Subtitles in the metadata
Former-commit-id: 37a561b155ee7c4c67222fa286288ff103dc728c

--- a/pubman/pubman_presentation/src/main/resources/nims/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_es.properties
@@ -189,6 +189,8 @@ ENUM_ALTERNATIVETITLETYPE_MATHML = MathML
 
 ENUM_ALTERNATIVETITLETYPE_OTHER = Otro
 
+ENUM_ALTERNATIVETITLETYPE_SUBTITLE = [NEW] Subtitle
+
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
 ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Deprecated: Fulltext
