--- a/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
@@ -189,6 +189,8 @@ ENUM_ALTERNATIVETITLETYPE_MATHML = MathML
 
 ENUM_ALTERNATIVETITLETYPE_OTHER = Andere
 
+ENUM_ALTERNATIVETITLETYPE_SUBTITLE = [NEW] Untertitel
+
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
 ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Deprecated: beliebiger Volltext
