--- a/pubman/pubman_presentation/src/main/resources/nims/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_ja.properties
@@ -189,6 +189,8 @@ ENUM_ALTERNATIVETITLETYPE_MATHML = MathML
 
 ENUM_ALTERNATIVETITLETYPE_OTHER = \u305D\u306E\u4ED6
 
+ENUM_ALTERNATIVETITLETYPE_SUBTITLE = [NEW] Subtitle
+
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
 ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Deprecated: Fulltext
