--- a/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
@@ -231,7 +231,7 @@ ENUM_CREATORROLE_ACTOR = [NEW] Schauspieler/in
 
 ENUM_CREATORROLE_ADVISOR = Ratgeber
 
-ENUM_CREATORROLE_APPLICANT = Antragssteller
+ENUM_CREATORROLE_APPLICANT = Anmelder
 
 ENUM_CREATORROLE_ARTIST = K\u00FCnstler
 
