--- a/pubman/pubman_presentation/src/main/resources/nims/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_en.properties
@@ -459,6 +459,8 @@ ENUM_IDENTIFIERTYPE_PMID = PMID
 
 ENUM_IDENTIFIERTYPE_PND = PND
 
+ENUM_IDENTIFIERTYPE_REPORT_NR = [NEW] Reportnr.
+
 ENUM_IDENTIFIERTYPE_SSRN = SSRN
 
 ENUM_IDENTIFIERTYPE_URI = URI
