PUBMAN-1189 fixed: Merge "multiple import" and "single import" pages
Former-commit-id: d21268c1b5d952911e556a43a7cfcb209ea6c1ff

--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -2030,7 +2030,7 @@ submission_lblSubmissionStart = Eingabemethode bestimmen
 
 submission_lnkEasySubmission = Einfache Eingabe
 
-submission_lnkImport = Importieren
+submission_lnkImport = [NEW] Daten abholen
 
 submission_lnkImportWorkspace = Import Bereich
 
