--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -756,6 +756,8 @@ Login_changeLanguage = Change Language
 # Login
 Login_login_logout = Login/Logout
 
+MainMenu_ToolsPage = Go to Tools Overview
+
 MainMenu_WorkspacesPage = Go to Workspaces Overview
 
 MainMenu_cartItemsPage = Go to Basket
@@ -768,8 +770,6 @@ MainMenu_myItems = Go to workspace.
 NoSearchResultListPage = No Search Results
 
 NoSearchResultsPage = No Search Results
-
-MainMenu_ToolsPage = Go to Tools Overview
 
 #
 # Quality Assurance / Moderator Workspace
@@ -2035,11 +2035,11 @@ submission_lblSubmissionStart = Choose Submission Method
 
 submission_lnkEasySubmission = Easy Submission
 
-submission_lnkImport = Import
+submission_lnkImport = [NEW] Fetch
 
 submission_lnkImportWorkspace = Import Workspace
 
-submission_lnkMultipleImport = Import multiple items
+submission_lnkMultipleImport = [NEW] IMPORT
 
 submission_lnkNewSubmission = Full Submission
 
