--- a/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
@@ -751,6 +751,8 @@ Login_changeLanguage = Cambiar Lengua
 # Login
 Login_login_logout = Login/Logout
 
+MainMenu_ToolsPage = Ir a la vista de las herramientas
+
 MainMenu_WorkspacesPage = Ir a la p\uFFFDgina de Workspaces.
 
 MainMenu_cartItemsPage = Ir a la p\uFFFDgina de la Cesta.
@@ -761,8 +763,6 @@ MainMenu_myItems = Ir al \uFFFDrea de trabajo.
 NoSearchResultListPage = Ning\uFFFDn resultado de b\uFFFDsqueda
 
 NoSearchResultsPage = Ning\uFFFDn resultado de b\uFFFDsqueda
-
-MainMenu_ToolsPage = Ir a la vista de las herramientas
 
 #
 # Quality Assurance / Moderator Workspace
@@ -1994,11 +1994,11 @@ submission_lblSubmissionStart = Escoja m\uFFFDtodos de env\uFFFDo
 
 submission_lnkEasySubmission = Env\uFFFDo f\uFFFDcil
 
-submission_lnkImport = Importar
+submission_lnkImport = [NEW] Fetch
 
 submission_lnkImportWorkspace = Importar Workspace
 
-submission_lnkMultipleImport = Importar m\uFFFDltiples items
+submission_lnkMultipleImport = [NEW] IMPORT
 
 submission_lnkNewSubmission = Env\uFFFDo completo
 
