--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -754,6 +754,8 @@ Login_changeLanguage = Change Language
 # Login
 Login_login_logout = Login /Logout
 
+MainMenu_ToolsPage = Go to Tools Overview
+
 MainMenu_WorkspacesPage = Go to Workspaces Overview
 
 MainMenu_cartItemsPage = \u4E00\u6642\u4FDD\u5B58\u306E\u767B\u9332\u5185\u5BB9\u3092\u898B\u308B
@@ -766,8 +768,6 @@ MainMenu_myItems = Go to Depositor Workspace.
 NoSearchResultListPage = No Search Results
 
 NoSearchResultsPage = No Search Results
-
-MainMenu_ToolsPage = Go to Tools Overview
 
 #
 # Quality Assurance / Moderator Workspace
@@ -2033,11 +2033,11 @@ submission_lblSubmissionStart = Submission Start
 
 submission_lnkEasySubmission = \u7C21\u6613\u767B\u9332
 
-submission_lnkImport = \u30A4\u30F3\u30DD\u30FC\u30C8
+submission_lnkImport = [NEW] Fetch
 
 submission_lnkImportWorkspace = Import Workspace
 
-submission_lnkMultipleImport = \u8907\u6570\u30a2\u30a4\u30c6\u30e0\u3092\u30a4\u30f3\u30dd\u30fc\u30c8
+submission_lnkMultipleImport = [NEW] IMPORT
 
 submission_lnkNewSubmission = \u8A73\u7D30\u767B\u9332
 
