--- a/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
@@ -2750,7 +2750,7 @@ styleTheme_lblSpecial = Spezial
 
 submission_descEasySubmission = \u00DCber die einfache Eingabe k\u00F6nnen Sie schrittweise Ihren Datensatz beschreiben. Am Ende der Eingabe haben Sie die M\u00F6glichkeit entweder den Datensatz abzuspeichern oder in die ausf\u00FChrliche Eingabemaske zu wechseln um weitere Angaben zu machen.
 
-submission_descImport = Diese Funktion bietet zum einen den Import einer Datei, die einen BibTeX Eintrag enth\u00E4lt, zum anderen kann man hier Metadaten und Volltext(e) aus anderen Systemen, wie arXiv oder PubMed Central in die eSciDoc Eingabemaske laden.
+submission_descImport = [NEW] Mit dieser Funktion kann man Metadaten und Volltext(e) aus anderen Systemen, wie arXiv oder PubMed Central in die eSciDoc Eingabemaske laden.
 
 submission_descMultipleImport = Diese Methode erlaubt Ihnen mehrere Items in einem strukturierten Format hochzuladen (z.B. EndNote, BibTex).
 
@@ -2768,11 +2768,11 @@ submission_lblSubmissionStart = Eingabemethode
 
 submission_lnkEasySubmission = EINFACH
 
-submission_lnkImport = Importieren
+submission_lnkImport = [NEW] Daten abholen
 
 submission_lnkImportWorkspace = Import Bereich
 
-submission_lnkMultipleImport = MASSENIMPORT
+submission_lnkMultipleImport = [NEW] IMPORT
 
 submission_lnkMultipleImportCapitalized = Massenimport
 
