--- a/pubman/pubman_presentation/src/main/resources/nims/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_es.properties
@@ -2647,7 +2647,7 @@ styleTheme_lblSpecial = Special
 
 submission_descEasySubmission = Usando el m\u00E9todo de env\u00EDo f\u00E1cil se puede a\u00F1adir informaci\u00F3n sobre una publicaci\u00F3n de forma escalonada. Al final del asistente se puede guardar el item o cambiar a la pantalla de env\u00EDo completo y a\u00F1adir m\u00E1s detalles.
 
-submission_descImport = Esta funcionalidad le permite importar un fichero BibTeX con una referencia BibTeX, o traer metadatos y texto completo(s)de otros sistemas como arXiv o PubMed Central.
+submission_descImport = [NEW] Esta funcionalidad le permite traer metadatos y texto completo(s)de otros sistemas como arXiv o PubMed Central.
 
 submission_descMultipleImport = Esta funcionalidad le permite importar un fichero BibTeX con m\u00FAltiples referencias BibTeX, o references or traer metadatos (y textos completos) de otros sistemas como SPIRES o BioMed Central.
 
@@ -2665,11 +2665,11 @@ submission_lblSubmissionStart = M\u00E9todo de Env\u00EDo
 
 submission_lnkEasySubmission = Env\u00EDo f\u00E1cil
 
-submission_lnkImport = Importar
+submission_lnkImport = [NEW] Fetch
 
 submission_lnkImportWorkspace = Importar Workspace
 
-submission_lnkMultipleImport = Importar m\u00FAltiples items
+submission_lnkMultipleImport = [NEW] Importar items
 
 submission_lnkMultipleImportCapitalized = Importar m\u00FAltiples items
 
