--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_en.properties
@@ -2752,7 +2752,7 @@ styleTheme_lblSpecial = Special
 
 submission_descEasySubmission = Using the easy submission one can enter stepwise information on a publication. At the end of the wizard one can save the item or switch to the full submission mask to add more details.
 
-submission_descImport = This method allows you to import a single BibTeX reference or it allows you to fetch metadata and full text(s) from other systems like arXiv or PubMed Central.
+submission_descImport = [NEW] This method allows you to fetch metadata and full text(s) from other systems like arXiv or PubMed Central.
 
 submission_descMultipleImport = This method allows you to import multiple items in a structured format (e.g. EndNote, BibTex).
 
@@ -2770,11 +2770,11 @@ submission_lblSubmissionStart = Submission Method
 
 submission_lnkEasySubmission = EASY
 
-submission_lnkImport = Import
+submission_lnkImport = [NEW] Fetch
 
 submission_lnkImportWorkspace = Import Workspace
 
-submission_lnkMultipleImport = MULTIPLE IMPORT
+submission_lnkMultipleImport = [NEW] IMPORT
 
 submission_lnkMultipleImportCapitalized = Multiple import
 
