--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_ja.properties
@@ -2732,7 +2732,7 @@ submission_lblSubmissionStart = \u767B\u9332\u958B\u59CB
 
 submission_lnkEasySubmission = \u7C21\u6613\u767B\u9332
 
-submission_lnkImport = \u30A4\u30F3\u30DD\u30FC\u30C8
+submission_lnkImport = [NEW] Fetch
 
 submission_lnkImportWorkspace = \u4E00\u62EC\u767B\u9332\u72B6\u6CC1\u4E00\u89A7
 
