PUBMAN-1189 fixed: Merge "multiple import" and "single import" pages
Former-commit-id: 069d3c185faafc34f16f9531ef083fde0b4ea230

--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -459,8 +459,6 @@ ENUM_IDENTIFIERTYPE_PMID = PMID
 
 ENUM_IDENTIFIERTYPE_PND = PND
 
-ENUM_IDENTIFIERTYPE_REPORT_NR = [NEW] Reportnr.
-
 ENUM_IDENTIFIERTYPE_SSRN = SSRN
 
 ENUM_IDENTIFIERTYPE_URI = URI
@@ -2768,7 +2766,7 @@ submission_lblSubmissionStart = Submission Method
 
 submission_lnkEasySubmission = EASY
 
-submission_lnkImport = [NEW] Fetch
+submission_lnkImport = [NEW] FETCH
 
 submission_lnkImportWorkspace = Import Workspace
 
