--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -438,8 +438,6 @@ ENUM_IDENTIFIERTYPE_PMID = PMID
 
 ENUM_IDENTIFIERTYPE_PND = PND
 
-ENUM_IDENTIFIERTYPE_REPORT_NR = [NEW] Reportnr.
-
 ENUM_IDENTIFIERTYPE_SSRN = SSRN
 
 ENUM_IDENTIFIERTYPE_URI = URI
@@ -2663,7 +2661,7 @@ submission_lblSubmissionStart = M\u00E9todo de Env\u00EDo
 
 submission_lnkEasySubmission = Env\u00EDo f\u00E1cil
 
-submission_lnkImport = [NEW] Fetch
+submission_lnkImport = [NEW] FETCH
 
 submission_lnkImportWorkspace = Importar Workspace
 
