--- a/pubman/pubman_presentation/src/main/resources/nims/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_ja.properties
@@ -440,8 +440,6 @@ ENUM_IDENTIFIERTYPE_PMID = PMID
 
 ENUM_IDENTIFIERTYPE_PND = PND
 
-ENUM_IDENTIFIERTYPE_REPORT_NR = [NEW] Reportnr.
-
 ENUM_IDENTIFIERTYPE_SSRN = SSRN
 
 ENUM_IDENTIFIERTYPE_URI = URI
@@ -2732,7 +2730,7 @@ submission_lblSubmissionStart = \u767B\u9332\u958B\u59CB
 
 submission_lnkEasySubmission = \u7C21\u6613\u767B\u9332
 
-submission_lnkImport = [NEW] Fetch
+submission_lnkImport = [NEW] FETCH
 
 submission_lnkImportWorkspace = \u4E00\u62EC\u767B\u9332\u72B6\u6CC1\u4E00\u89A7
 
