--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_de.properties
@@ -2768,7 +2768,7 @@ submission_lblSubmissionStart = Eingabemethode
 
 submission_lnkEasySubmission = EINFACH
 
-submission_lnkImport = [NEW] Daten abholen
+submission_lnkImport = [NEW] DATEN ABHOLEN
 
 submission_lnkImportWorkspace = Import Bereich
 
