PUBMAN-1189 fixed: Merge "multiple import" and "single import" pages
Former-commit-id: bbdb4bb6c0be4a43a81cd62bc1039b2ebfab9897

--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -604,9 +604,7 @@ EasySubmission = Easy Submission
 
 EasySubmissionPage = Easy Submission
 
-EasySubmission_lblFetchMetadata = IMPORT
-
-EasySubmission_lblImportMetadata = Import
+EasySubmission_lblImportMetadata = [NEW] Fetch
 
 EditItemPage = Edit item
 
