--- a/pubman/pubman_presentation/src/main/resources/nims/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_es.properties
@@ -583,9 +583,7 @@ EasySubmission = Env\u00EDo f\u00E1cil
 
 EasySubmissionPage = Env\u00EDo f\u00E1cil
 
-EasySubmission_lblFetchMetadata = TRAER
-
-EasySubmission_lblImportMetadata = Importar
+EasySubmission_lblImportMetadata = [NEW] Fetch
 
 EditItemPage = Editar item
 
