--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_de.properties
@@ -606,9 +606,7 @@ EasySubmission = Einfache Eingabe
 
 EasySubmissionPage = Einfache Eingabe
 
-EasySubmission_lblFetchMetadata = IMPORT
-
-EasySubmission_lblImportMetadata = Import
+EasySubmission_lblImportMetadata = [NEW] Daten abholen
 
 EditItemPage = Datensatz bearbeiten
 
