--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_en.properties
@@ -604,9 +604,7 @@ EasySubmission = Easy Submission
 
 EasySubmissionPage = Easy Submission
 
-EasySubmission_lblFetchMetadata = IMPORT
-
-EasySubmission_lblImportMetadata = Import
+EasySubmission_lblImportMetadata = [NEW] Fetch
 
 EditItemPage = Edit item
 
