--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_ja.properties
@@ -585,9 +585,7 @@ EasySubmission = \u7C21\u6613\u767B\u9332
 
 EasySubmissionPage = \u7C21\u6613\u767B\u9332
 
-EasySubmission_lblFetchMetadata = \u30E1\u30BF\u30C7\u30FC\u30BF\u306E\u53D6\u5F97
-
-EasySubmission_lblImportMetadata = \u30A4\u30F3\u30DD\u30FC\u30C8
+EasySubmission_lblImportMetadata = [NEW] Fetch
 
 EditItemPage = \u30A2\u30A4\u30C6\u30E0\u7DE8\u96C6
 
