Resolved [PUBMAN-2270] - SSRN Button
Former-commit-id: 4094bcfb820d7305b4d2029ca87a8106cda9cd2c

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -265,6 +265,14 @@ ViewItemFull_withdrawn = Dieser Datensatz wurde verworfen!
 #
 ViewItem_deleteConfirmation = Wollen Sie den Datensatz wirklich l\u00F6schen?
 
+ViewItem_ssrnAddedSuccessfully = SSRN-Tag wurde erfolgreich hinzugef\u00FCgt
+
+ViewItem_ssrnAddingProblem = SSRN-Tag konnte nicht hinzugef\u00FCgt werden
+
+ViewItem_ssrnRemovedSuccessfully = SSRN-Tag wurde erfolgreich entfernt
+
+ViewItem_ssrnRemovingProblem = SSRN-Tag konnte nicht entfernt werden
+
 #
 # Yearbook
 #
