--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -1021,6 +1021,10 @@ ViewItemFull_lblWithdrawn = Zur\u00FCckgezogen
 
 ViewItemFull_lblnameOfCollection = Name der Collection
 
+ViewItemFull_lblAddSsrn = F\u00FCr SSRN vorschlagen
+
+ViewItemFull_lblRemoveSsrn = Von SSRN Vorschlagsliste entfernen
+
 #
 #ViewItemLog
 #
@@ -2030,7 +2034,7 @@ submission_lblSubmissionStart = Eingabemethode bestimmen
 
 submission_lnkEasySubmission = Einfache Eingabe
 
-submission_lnkImport = [NEW] Daten abholen
+submission_lnkImport = Importieren
 
 submission_lnkImportWorkspace = Import Bereich
 
