--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -1396,6 +1396,8 @@ ViewItemFull_lblnameOfCollection = Name der Collection
 
 ViewItemFull_lblnameOfCreator = Besitzer
 
+ViewItemFull_lblSSRN = SSRN
+
 #
 #ViewItemLog
 #
