--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -1397,6 +1397,8 @@ ViewItemFull_lblnameOfCollection = Name of Collection
 
 ViewItemFull_lblnameOfCreator = Owner
 
+ViewItemFull_lblSSRN = SSRN
+
 #
 #ViewItemLog
 #
