--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -1382,6 +1382,8 @@ ViewItemFull_lblnameOfCollection = Nombre de la Colecci\u00F3n
 
 ViewItemFull_lblnameOfCreator = Owner
 
+ViewItemFull_lblSSRN = SSRN
+
 #
 #ViewItemLog
 #
