--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
@@ -1371,6 +1371,8 @@ ViewItemFull_lblnameOfCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D
 
 ViewItemFull_lblnameOfCreator = \u767B\u9332\u8005
 
+ViewItemFull_lblSSRN = SSRN
+
 #
 #ViewItemLog
 #
