--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_de.properties
@@ -1398,6 +1398,8 @@ ViewItemFull_lblnameOfCollection = Name der Collection
 
 ViewItemFull_lblnameOfCreator = Besitzer
 
+ViewItemFull_lblSSRN = SSRN
+
 #
 #ViewItemLog
 #
