--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_en.properties
@@ -1399,6 +1399,8 @@ ViewItemFull_lblnameOfCollection = Name of Collection
 
 ViewItemFull_lblnameOfCreator = Owner
 
+ViewItemFull_lblSSRN = SSRN
+
 #
 #ViewItemLog
 #
