Messages changed for SSRN
Former-commit-id: 23b5934d180397a84a71580485c87b18fa403bd7

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -265,13 +265,13 @@ ViewItemFull_withdrawn = Dieser Datensatz wurde verworfen!
 #
 ViewItem_deleteConfirmation = Wollen Sie den Datensatz wirklich l\u00F6schen?
 
-ViewItem_ssrnAddedSuccessfully = SSRN-Tag wurde erfolgreich hinzugef\u00FCgt
+ViewItem_ssrnAddedSuccessfully = [NEW] Diese Publikation wurde für SSRN vorgeschlagen
 
-ViewItem_ssrnAddingProblem = SSRN-Tag konnte nicht hinzugef\u00FCgt werden
+ViewItem_ssrnAddingProblem = [NEW] Diese Publikation konnte nicht für SSRN vorgeschlagen werden
 
-ViewItem_ssrnRemovedSuccessfully = SSRN-Tag wurde erfolgreich entfernt
+ViewItem_ssrnRemovedSuccessfully = [NEW] Diese Publikation wurde aus der Vorschlagsliste für SSRN entfernt
 
-ViewItem_ssrnRemovingProblem = SSRN-Tag konnte nicht entfernt werden
+ViewItem_ssrnRemovingProblem = [NEW] Diese Publikation konnte nicht aus der Vorschlagsliste für SSRN entfernt werden
 
 #
 # Yearbook
