Resolved [PUBMAN-2443] - Presentation of PIDs on Pubman View Item Page Resolved Metadata-Fetch - [PUBMAN-2439] - PubMed Central Fetch doesn't work properly Yearbook export is limited to the candidates section BugFix for updates on NULL-Lists
Former-commit-id: 9bf9d19315acab9d72771c3c61d76fc889b2dcb5

--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -1175,7 +1175,7 @@ ViewItemFull_lblAlternativeTitle = Alternativer Titel
 
 ViewItemFull_lblBasic = Basisdaten
 
-ViewItemFull_lblCiteItemAs = Lesezeichen zu diesem Datensatz setzen
+ViewItemFull_lblCiteItemAs = Permalink
 
 ViewItemFull_lblCreateItemFromTemplate = Als Vorlage verwenden
 
