--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
@@ -1152,7 +1152,7 @@ ViewItemFull_lblAlternativeTitle = \u305D\u306E\u4ED6\u306E\u30BF\u30A4\u30C8\u3
 
 ViewItemFull_lblBasic = \u57FA\u672C\u60C5\u5831
 
-ViewItemFull_lblCiteItemAs = \u5F15\u7528URL
+ViewItemFull_lblCiteItemAs = Permalink
 
 ViewItemFull_lblCreateItemFromTemplate = \u30B3\u30D4\u30FC\u3057\u3066\u65B0\u898F\u767B\u9332
 
