--- a/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
@@ -1175,7 +1175,7 @@ ViewItemFull_lblAlternativeTitle = Alternativer Titel
 
 ViewItemFull_lblBasic = Basisdaten
 
-ViewItemFull_lblCiteItemAs = Lesezeichen zu diesem Datensatz setzen
+ViewItemFull_lblCiteItemAs = Permalink
 
 ViewItemFull_lblCreateItemFromTemplate = Als Vorlage verwenden
 
