--- a/pubman/pubman_presentation/src/main/resources/nims/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_es.properties
@@ -1163,7 +1163,7 @@ ViewItemFull_lblAlternativeTitle = T\u00EDtulo Alternativo
 
 ViewItemFull_lblBasic = B\u00E1sico
 
-ViewItemFull_lblCiteItemAs = Marque este item
+ViewItemFull_lblCiteItemAs = Permalink
 
 ViewItemFull_lblCreateItemFromTemplate = Usar item como plantilla
 
