--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_en.properties
@@ -1175,7 +1175,7 @@ ViewItemFull_lblAlternativeTitle = Alternative Title
 
 ViewItemFull_lblBasic = Basic
 
-ViewItemFull_lblCiteItemAs = Bookmark this item
+ViewItemFull_lblCiteItemAs = Permalink
 
 ViewItemFull_lblCreateItemFromTemplate = Use item as template
 
