--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -2584,7 +2584,7 @@ mainMenu_lnkHelp = Help
 #
 mainMenu_lnkHome = START
 
-mainMenu_lnkPolicy = Policy&Disclaimer
+mainMenu_lnkPolicy = Disclaimer
 
 mainMenu_lnkWorkspaces = WORKSPACES
 
