--- a/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
@@ -2584,7 +2584,7 @@ mainMenu_lnkHelp = Hilfe
 #
 mainMenu_lnkHome = START
 
-mainMenu_lnkPolicy = Leitlinien&Impressum
+mainMenu_lnkPolicy = Impressum
 
 mainMenu_lnkWorkspaces = ARBEITSBEREICHE
 
