New Role "sound designer"
Former-commit-id: 9d8e92113c81a8a2292b2d194714eb8053c3cd93

--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -259,6 +259,8 @@ ENUM_CREATORROLE_PHOTOGRAPHER = Fotograf
 
 ENUM_CREATORROLE_REFEREE = Gutachter
 
+ENUM_CREATORROLE_SOUND_DESIGNER = [NEW] Tontechniker
+
 ENUM_CREATORROLE_TRANSCRIBER = Transkribierer
 
 ENUM_CREATORROLE_TRANSLATOR = \u00DCbersetzer
@@ -1309,6 +1311,8 @@ ViewItemFull_lblRollback = Version wiederherstellen
 
 ViewItemFull_lblRollbackConfirm = Sollen die bestehenden Daten wirklich mit dieser Version ersetzt werden?
 
+ViewItemFull_lblSSRN = SSRN
+
 ViewItemFull_lblSaveFulltext = Speichern
 
 ViewItemFull_lblShowGroup = einblenden:
@@ -1395,8 +1399,6 @@ ViewItemFull_lblWithdrawn = Verworfen
 ViewItemFull_lblnameOfCollection = Name der Collection
 
 ViewItemFull_lblnameOfCreator = Besitzer
-
-ViewItemFull_lblSSRN = SSRN
 
 #
 #ViewItemLog
