--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -259,6 +259,8 @@ ENUM_CREATORROLE_PHOTOGRAPHER = Photographer
 
 ENUM_CREATORROLE_REFEREE = Referee
 
+ENUM_CREATORROLE_SOUND_DESIGNER = [NEW] Sound engineer
+
 ENUM_CREATORROLE_TRANSCRIBER = Transcriber
 
 ENUM_CREATORROLE_TRANSLATOR = Translator
@@ -1309,6 +1311,8 @@ ViewItemFull_lblRollback = Rollback to this version
 
 ViewItemFull_lblRollbackConfirm = Do you really want to replace the existing data with this version?
 
+ViewItemFull_lblSSRN = SSRN
+
 ViewItemFull_lblSaveFulltext = Download
 
 ViewItemFull_lblShowGroup = show
@@ -1398,8 +1402,6 @@ ViewItemFull_lblWithdrawn = Discarded
 ViewItemFull_lblnameOfCollection = Name of Collection
 
 ViewItemFull_lblnameOfCreator = Owner
-
-ViewItemFull_lblSSRN = SSRN
 
 #
 #ViewItemLog
