--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -259,6 +259,8 @@ ENUM_CREATORROLE_PHOTOGRAPHER = Fot\u00F3grafo
 
 ENUM_CREATORROLE_REFEREE = Evaluador
 
+ENUM_CREATORROLE_SOUND_DESIGNER = [NEW] Sound engineer
+
 ENUM_CREATORROLE_TRANSCRIBER = Transcribe 
 
 ENUM_CREATORROLE_TRANSLATOR = Traductor 
@@ -1299,6 +1301,8 @@ ViewItemFull_lblRollback = Revertir
 
 ViewItemFull_lblRollbackConfirm = Realmente desea reemplazar los datos existentes con esta versi\u00F3n? 
 
+ViewItemFull_lblSSRN = SSRN
+
 ViewItemFull_lblSaveFulltext = Download
 
 ViewItemFull_lblShowGroup = mostrar
@@ -1383,8 +1387,6 @@ ViewItemFull_lblWithdrawn = Retirado
 ViewItemFull_lblnameOfCollection = Nombre de la Colecci\u00F3n
 
 ViewItemFull_lblnameOfCreator = Owner
-
-ViewItemFull_lblSSRN = SSRN
 
 #
 #ViewItemLog
