--- a/pubman/pubman_presentation/src/main/resources/nims/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_ja.properties
@@ -259,6 +259,8 @@ ENUM_CREATORROLE_PHOTOGRAPHER = \u5199\u771F\u5BB6
 
 ENUM_CREATORROLE_REFEREE = \u76E3\u4FEE\u8005
 
+ENUM_CREATORROLE_SOUND_DESIGNER = [NEW] Sound engineer
+
 ENUM_CREATORROLE_TRANSCRIBER = \u8EE2\u8A18\u8005
 
 ENUM_CREATORROLE_TRANSLATOR = \u7FFB\u8A33\u8005
@@ -1286,6 +1288,8 @@ ViewItemFull_lblRollback = \u3053\u306E\u7248\u306B\u623B\u3059
 
 ViewItemFull_lblRollbackConfirm = \u73FE\u5728\u306E\u6700\u65B0\u30C7\u30FC\u30BF\u3092\u3053\u306E\u7248\u306E\u60C5\u5831\u3067\u7F6E\u304D\u63DB\u3048\u3066\u826F\u3044\u3067\u3059\u304B?
 
+ViewItemFull_lblSSRN = SSRN
+
 ViewItemFull_lblSaveFulltext = \u4FDD\u5B58
 
 ViewItemFull_lblShowGroup = \u8868\u793A:
@@ -1374,8 +1378,6 @@ ViewItemFull_lblWithdrawn = \u53D6\u308A\u4E0B\u3052
 ViewItemFull_lblnameOfCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D
 
 ViewItemFull_lblnameOfCreator = \u767B\u9332\u8005
-
-ViewItemFull_lblSSRN = SSRN
 
 #
 #ViewItemLog
