PUBMAN-2410 added new role 'Producer'
Former-commit-id: 6d40f7214cf5240f387b8fc7373dbbb72621282c

--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -257,6 +257,8 @@ ENUM_CREATORROLE_PAINTER = Maler
 
 ENUM_CREATORROLE_PHOTOGRAPHER = Fotograf
 
+ENUM_CREATORROLE_PRODUCER = [NEW] Produzent
+
 ENUM_CREATORROLE_REFEREE = Gutachter
 
 ENUM_CREATORROLE_SOUND_DESIGNER = [NEW] Tontechniker
