--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -257,6 +257,8 @@ ENUM_CREATORROLE_PAINTER = Pintor
 
 ENUM_CREATORROLE_PHOTOGRAPHER = Fot\u00F3grafo 
 
+ENUM_CREATORROLE_PRODUCER = [NEW] Producer
+
 ENUM_CREATORROLE_REFEREE = Evaluador
 
 ENUM_CREATORROLE_SOUND_DESIGNER = [NEW] Sound engineer
