--- a/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
@@ -257,6 +257,8 @@ ENUM_CREATORROLE_PAINTER = Maler
 
 ENUM_CREATORROLE_PHOTOGRAPHER = Fotograf
 
+ENUM_CREATORROLE_PRODUCER = [NEW] Produzent
+
 ENUM_CREATORROLE_REFEREE = Gutachter
 
 ENUM_CREATORROLE_SOUND_DESIGNER = [NEW] Tontechniker
