--- a/pubman/pubman_presentation/src/main/resources/nims/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_en.properties
@@ -257,6 +257,8 @@ ENUM_CREATORROLE_PAINTER = Painter
 
 ENUM_CREATORROLE_PHOTOGRAPHER = Photographer
 
+ENUM_CREATORROLE_PRODUCER = [NEW] Producer
+
 ENUM_CREATORROLE_REFEREE = Referee
 
 ENUM_CREATORROLE_SOUND_DESIGNER = [NEW] Sound engineer
