--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_ja.properties
@@ -257,6 +257,8 @@ ENUM_CREATORROLE_PAINTER = \u30DA\u30A4\u30F3\u30BF\u30FC
 
 ENUM_CREATORROLE_PHOTOGRAPHER = \u5199\u771F\u5BB6
 
+ENUM_CREATORROLE_PRODUCER = [NEW] Producer
+
 ENUM_CREATORROLE_REFEREE = \u76E3\u4FEE\u8005
 
 ENUM_CREATORROLE_SOUND_DESIGNER = [NEW] Sound engineer
