--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -729,7 +729,7 @@ EditItem_lblItemVersionID = Item ID:
 
 EditItem_lblItemlatestChange = Created on
 
-EditItem_lblLicencingInfo = License
+EditItem_lblLicencingInfo = License-URL
 
 EditItem_lblLocation = library signature
 
