--- a/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
@@ -729,7 +729,7 @@ EditItem_lblItemVersionID = ID des Datensatzes:
 
 EditItem_lblItemlatestChange = Erstellt am
 
-EditItem_lblLicencingInfo = Lizenz
+EditItem_lblLicencingInfo = Lizenz-URL
 
 EditItem_lblLocation = Bibliothekssignatur
 
