--- a/pubman/pubman_presentation/src/main/resources/nims/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_es.properties
@@ -720,7 +720,7 @@ EditItem_lblItemVersionID = Item ID:
 
 EditItem_lblItemlatestChange = Created on
 
-EditItem_lblLicencingInfo = Licencia
+EditItem_lblLicencingInfo = Licencia-URL
 
 EditItem_lblLocation = firma de la biblioteca
 
