--- a/pubman/pubman_presentation/src/main/resources/nims/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_ja.properties
@@ -710,7 +710,7 @@ EditItem_lblItemVersionID = Item ID:
 
 EditItem_lblItemlatestChange = Created on
 
-EditItem_lblLicencingInfo = \u30E9\u30A4\u30BB\u30F3\u30B9
+EditItem_lblLicencingInfo = \u30E9\u30A4\u30BB\u30F3\u30B9-URL
 
 EditItem_lblLocation = \u8535\u66F8\u4F4D\u7F6E
 
