--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_ja.properties
@@ -710,7 +710,7 @@ EditItem_lblItemVersionID = \u30A2\u30A4\u30C6\u30E0ID:
 
 EditItem_lblItemlatestChange = \u4F5C\u6210\u65E5
 
-EditItem_lblLicencingInfo = \u30E9\u30A4\u30BB\u30F3\u30B9
+EditItem_lblLicencingInfo = \u30E9\u30A4\u30BB\u30F3\u30B9-URL
 
 EditItem_lblLocation = \u8535\u66F8\u4F4D\u7F6E
 
